Found out phasor is obsolete

--- a/Random python/rotationTest.ipynb
+++ b/Random python/rotationTest.ipynb
@@ -28,12 +28,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
     "import quaternion as qua\n",
-    "import phasor as pha\n",
     "import scientific as sci\n",
     "import matrixStuff as mat"
    ]
@@ -42,16 +42,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[1.0, 0.0, -1.0], [-0.5, 0.5, 1.0], [-1.0, 0.0, 2.0]]\n[[1.0, 0.0, 0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]\n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "a = mat.mat([[2j,-2j],[1,1]])\n",
+    "a_inv = 1/a\n",
+    "d = mat.mat([[-3+2j,0],[0,-3-2j]])"
+   ]
   },
   {
    "cell_type": "code",
