--- a/Random python/rotationTest.ipynb
+++ b/Random python/rotationTest.ipynb
@@ -34,20 +34,26 @@
    "source": [
     "import math\n",
     "import quaternion as qua\n",
-    "import scientific as sci\n",
-    "import matrixStuff as mat"
+    "import scientific as sfc\n",
+    "import matrixStuff as mxf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = mat.mat([[2j,-2j],[1,1]])\n",
-    "a_inv = 1/a\n",
-    "d = mat.mat([[-3+2j,0],[0,-3-2j]])"
-   ]
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4.716 E 18852\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
