--- a/Random python/rotationTest.ipynb
+++ b/Random python/rotationTest.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -49,11 +49,15 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "4.716 E 18852\n"
+      "[[(1+0j), 0j], [0j, (1+0j)]]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "a = mxf.mat([[1,1j],[-1,1]])\n",
+    "b = 1/a\n",
+    "print(a*b)"
+   ]
   },
   {
    "cell_type": "code",
